<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/Theme.SpotifyClone"
    tools:context=".ui.login.LoginFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_20"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_30"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:viewBindingIgnore="true" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="0dp"
                android:layout_height="@dimen/layout_edit_text_field_height"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_20"
                android:background="@drawable/ic_button_positive"
                android:backgroundTint="@color/dark_gray"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="@dimen/margin_20"
                android:paddingEnd="@dimen/margin_20"
                android:textSize="@dimen/text_size_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_email" />

            <TextView
                android:id="@+id/text_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_20"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_30"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_email"
                tools:viewBindingIgnore="true" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/layout_edit_text_field_height"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_20"
                android:background="@drawable/ic_button_positive"
                android:backgroundTint="@color/dark_gray"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/margin_20"
                android:paddingEnd="@dimen/margin_20"
                android:textSize="@dimen/text_size_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_password" />

            <TextView
                android:id="@+id/text_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18"
                app:layout_constraintEnd_toEndOf="@id/edit_password"
                app:layout_constraintTop_toBottomOf="@id/edit_password" />

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_large_width"
                android:layout_margin="@dimen/margin_50"
                android:background="@drawable/button_positive_selector"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="2:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_forgot_password" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/green"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/btn_login"
                app:layout_constraintEnd_toEndOf="@id/btn_login"
                app:layout_constraintStart_toStartOf="@id/btn_login"
                app:layout_constraintTop_toTopOf="@+id/btn_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>