<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_music"
        android:layout_width="@dimen/layout_music_bar_item_height"
        android:layout_height="@dimen/layout_music_bar_item_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedRectangle" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:text="Music Title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintBottom_toTopOf="@id/text_artist"
        app:layout_constraintStart_toEndOf="@+id/image_music"
        app:layout_constraintTop_toTopOf="@id/image_music" />

    <TextView
        android:id="@+id/text_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Artist"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toBottomOf="@id/image_music"
        app:layout_constraintStart_toStartOf="@+id/text_title"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

</androidx.constraintlayout.widget.ConstraintLayout>